RouteLogic-v4.0.0/force-app/main/default/objects/Routing_Ledger__c/Routing_Ledger__c.object-meta.xml
<CustomObject>
    <description>Immutable audit ledger for AI chatbot-to-human handoff routing decisions. Provides cryptographic verification and complete audit trail for all routing intelligence.</description>
    <label>Routing Ledger</label>
    <nameField>
        <displayFormat>RL-{00000000}</displayFormat>
        <label>Routing Ledger Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Routing Ledgers</pluralLabel>
    <recordTypes>
        <fullName>Handoff_Entry</fullName>
        <active>true</active>
        <description>Standard handoff routing entry</description>
        <label>Handoff Entry</label>
    </recordTypes>
    <recordTypes>
        <fullName>Escalation_Entry</fullName>
        <active>true</active>
        <description>Escalation routing entry</description>
        <label>Escalation Entry</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>