RouteLogic-v4.0.0/force-app/main/default/objects/Routing_Ledger__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the Case that was routed</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Routing Ledgers</relationshipLabel>
    <relationshipName>Routing_Ledgers</relationshipName>
    <type>Lookup</type>
</CustomField>