RouteLogic-v4.0.0/force-app/main/default/objects/Routing_Ledger__c/fields/Handoff_Status__c.field-meta.xml
<CustomField>
    <fullName>Handoff_Status__c</fullName>
    <description>Current status of the handoff process</description>
    <label>Handoff Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initiated</fullName>
                <default>true</default>
                <label>Initiated</label>
            </value>
            <value>
                <fullName>Routed</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Black_Hole</fullName>
                <label>Black Hole</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>