RouteLogic-v4.0.0/force-app/main/default/objects/Routing_Ledger__c/fields/Handoff_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Handoff_Timestamp__c</fullName>
    <description>Timestamp when the handoff was initiated</description>
    <label>Handoff Timestamp</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>