RouteLogic-v4.0.0/force-app/main/default/objects/Routing_Ledger__c/fields/Initial_AI_Provider__c.field-meta.xml
<CustomField>
    <fullName>Initial_AI_Provider__c</fullName>
    <description>The AI provider that initiated the handoff request</description>
    <label>Initial AI Provider</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>