RouteLogic-v4.0.0/force-app/main/default/objects/Routing_Ledger__c/fields/Routing_Engine_Decision__c.field-meta.xml
<CustomField>
    <fullName>Routing_Engine_Decision__c</fullName>
    <description>JSON representation of the complete routing decision from AgnosticRoutingEngine</description>
    <label>Routing Engine Decision</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>