RouteLogic-v4.0.0/force-app/main/default/objects/Routing_Ledger__c/fields/Security_Hash__c.field-meta.xml
<CustomField>
    <fullName>Security_Hash__c</fullName>
    <description>SHA-256 hash for immutability verification of the routing decision</description>
    <label>Security Hash</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>